--- a/src/App.sass
+++ b/src/App.sass
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap')
+
 *
   margin: 0
   padding: 0
   border: 0
   outline: none
+
+body
+  background-color: #37474f
+  color: #fff
+  font-family: 'Titillium Web', sans-serif
