--- a/src/pages/Home/Home.module.sass
+++ b/src/pages/Home/Home.module.sass
@@ -1,29 +1,29 @@
 //background-color: #37474f
 
 .pageContainer
-  color: #212121
-
-.pageHeader, .pageSearch, 
-.pageFooter, .pageCards
   width: 75vw
   margin: 0 auto
-  padding: 2% 0 2% 0
  
-.pageHeader 
+.pageHeader, .pageFooter,
+.pageSearch, .pageCards
   padding: 5% 0 3% 0
 
 .pageSearch
+  h1
+    margin-bottom: 1%
+  
   form
     width: 45vw
     display: flex
     justify-content: space-between
     
+
     input[type="text"]
       flex: 1
       background-color: #f5f5f5
       border: 2px solid #fff 
       border-radius: 5px 0 0 5px
-      padding: 5px
+      padding: 8px
 
     button
       padding: 5px
@@ -33,5 +33,10 @@
       color: #fff
       font-weight: bold
 
-.pageContent
-  background-color:#f5f5f5
+.pageFooter
+  display: flex
+  justify-content: flex-end
+
+  a
+    text-decoration: none
+    color: #00c853
