--- a/src/pages/Home/Home.module.sass
+++ b/src/pages/Home/Home.module.sass
@@ -1,12 +1,13 @@
-//background-color: #37474f
-
 .pageContainer
+  display: flex
+  flex-direction: column
+  min-height: 100vh
   width: 75vw
   margin: 0 auto
  
 .pageHeader, .pageFooter,
 .pageSearch, .pageCards
-  padding: 5% 0 3% 0
+  padding: 2% 0 2% 0
 
 .pageSearch
   h1
@@ -16,7 +17,6 @@
     width: 45vw
     display: flex
     justify-content: space-between
-    
 
     input[type="text"]
       flex: 1
@@ -33,9 +33,49 @@
       color: #fff
       font-weight: bold
 
+.pageCards
+  display: flex
+  justify-content: space-between
+  flex-wrap: wrap
+  margin-top: 1%
+  
+  .card
+    background-color: #fff
+    color: #212121
+    min-width: 25%
+    border: 2px solid #fff
+    border-radius: 5px
+    padding: 2%
+
+    span
+      display: block
+    
+    .cardHeader
+      font-weight: bold
+      font-size: 2em  
+
+    .cardMain
+      display: flex
+      justify-content: space-between
+      align-items: center
+      margin: 5% 0 8% 0
+      
+      img
+        width: 100px
+
+      :nth-child(1)
+        font-size: 2.5em  
+
+    .cardDetails
+      display: flex
+      justify-content: space-between
+      font-size: 0.8em
+
 .pageFooter
+  margin-top: auto
   display: flex
   justify-content: flex-end
+  align-items: center
 
   a
     text-decoration: none
