Change standard font-family

--- a/src/App.sass
+++ b/src/App.sass
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap')
 
 *
   margin: 0
@@ -9,4 +9,4 @@
 body
   background-color: #37474f
   color: #fff
-  font-family: 'Titillium Web', sans-serif
+  font-family: 'Open Sans', sans-serif
