--- a/src/pages/Home/Home.module.sass
+++ b/src/pages/Home/Home.module.sass
@@ -23,7 +23,8 @@
       background-color: #f5f5f5
       border: 2px solid #fff 
       border-radius: 5px 0 0 5px
-      padding: 8px
+      padding: 10px
+      color: #212121
 
     button
       padding: 5px
