--- a/src/pages/Home/Home.module.sass
+++ b/src/pages/Home/Home.module.sass
@@ -9,6 +9,15 @@
 .pageSearch, .pageCards
   padding: 2% 0 2% 0
 
+.pageHeader
+  display: flex
+  align-items: center
+  font-size: 1.2em
+
+  .logo
+    max-width: 65px
+    margin-right: 2%
+
 .pageSearch
   h1
     margin-bottom: 1%
