--- a/src/pages/Home/Home.module.sass
+++ b/src/pages/Home/Home.module.sass
@@ -73,15 +73,18 @@
 
     .cardMain
       display: flex
-      justify-content: space-between
+      flex-direction: column
       align-items: center
       margin: 5% 0 8% 0
-      
-      img
-        width: 100px
 
-      :nth-child(1)
-        font-size: 2.5em  
+      .cardTemp
+        display: flex
+        justify-content: center
+        align-items: center
+        font-size: 2.5em 
+          
+        img 
+          padding-right: 5%
 
     .cardDetails
       display: flex
