Add cursor pointer to search button

--- a/src/pages/Home/Home.module.sass
+++ b/src/pages/Home/Home.module.sass
@@ -41,6 +41,7 @@
       border-radius: 0 5px 5px 0
       color: #fff
       font-weight: bold
+      cursor: pointer
 
 .pageCards
   display: flex
