--- a/src/pages/Home/Home.module.sass
+++ b/src/pages/Home/Home.module.sass
@@ -1,3 +1,6 @@
+$secondary-color: #00c853
+$secondary-color-darker: darken($secondary-color, 5%)
+
 .pageContainer
   display: flex
   flex-direction: column
@@ -32,16 +35,19 @@
       background-color: #f5f5f5
       border: 2px solid #fff 
       border-radius: 5px 0 0 5px
-      padding: 10px
+      padding: 2%
       color: #212121
 
     button
-      padding: 5px
-      background-color: #00c853
+      padding: 0 3% 0 3%
+      background-color: $secondary-color
       border-radius: 0 5px 5px 0
       color: #fff
       font-weight: bold
       cursor: pointer
+
+      &:hover
+        background-color: $secondary-color-darker
 
 .pageCards
   display: flex
@@ -57,4 +63,7 @@
 
   a
     text-decoration: none
-    color: #00c853
+    color: $secondary-color
+
+    &:hover
+      color: darken($secondary-color, 5%)
