Add light theme and set up theme switcher

--- a/src/App.sass
+++ b/src/App.sass
@@ -7,6 +7,12 @@
   outline: none
 
 body
+  font-family: 'Open Sans', sans-serif
+
+.light
+  background-color: #e0e0e0
+  color: #212121
+
+.dark
   background-color: #37474f
   color: #fff
-  font-family: 'Open Sans', sans-serif
