--- a/src/pages/Home/Home.module.sass
+++ b/src/pages/Home/Home.module.sass
@@ -56,15 +56,23 @@ $secondary-color-darker: darken($secondary-color, 5%)
       color: #212121
 
     button
+      display: flex
+      align-items: center
+      justify-content: center
       padding: 0 3% 0 3%
       background-color: $secondary-color
       border-radius: 0 5px 5px 0
       color: #fff
       font-weight: bold
       cursor: pointer
+      width: 10%
 
       &:hover
         background-color: $secondary-color-darker
+      
+      svg
+        width: 1.5vw
+        height: 1.5vw
 
 .pageCards
   display: grid
