--- a/src/pages/Home/Home.module.sass
+++ b/src/pages/Home/Home.module.sass
@@ -22,6 +22,7 @@ $secondary-color-darker: darken($secondary-color, 5%)
     align-items: center
     font-size: 1.2em
     flex: 1
+    user-select: none
     
     img
       max-width: 65px
@@ -30,13 +31,6 @@ $secondary-color-darker: darken($secondary-color, 5%)
   .settings
     display: flex
     justify-content: flex-end
-
-    button 
-      background-color: transparent
-      display: flex
-      justify-content: space-between
-      color: $secondary-color
-      cursor: pointer
    
 .pageSearch
   h1
