--- a/src/pages/Home/Home.module.sass
+++ b/src/pages/Home/Home.module.sass
@@ -85,4 +85,4 @@ $secondary-color-darker: darken($secondary-color, 5%)
     color: $secondary-color
 
     &:hover
-      color: darken($secondary-color, 5%)
+      color: $secondary-color-darker
