Create page footer component

--- a/src/pages/Home/Home.module.sass
+++ b/src/pages/Home/Home.module.sass
@@ -16,6 +16,7 @@ $secondary-color-darker: darken($secondary-color, 5%)
   display: flex
   justify-content: space-between
   align-items: center
+  margin-top: 2%
 
   .logo
     display: flex
@@ -73,16 +74,3 @@ $secondary-color-darker: darken($secondary-color, 5%)
   grid-gap: 30px
   justify-items: stretch
   margin-top: 1%
-
-.pageFooter
-  margin-top: auto
-  display: flex
-  justify-content: flex-end
-  align-items: center
-
-  a
-    text-decoration: none
-    color: $secondary-color
-
-    &:hover
-      color: $secondary-color-darker
