--- a/src/components/PageFooter/PageFooter.module.sass
+++ b/src/components/PageFooter/PageFooter.module.sass
@@ -6,7 +6,7 @@ $secondary-color-darker: darken($secondary-color, 5%)
   display: flex
   justify-content: flex-end
   align-items: center
-  padding: 2%
+  padding: 2% 0 2% 0
 
   a
     text-decoration: none
