--- a/src/App.sass
+++ b/src/App.sass
@@ -8,3 +8,10 @@
 
 body
   font-family: 'Open Sans', sans-serif
+
+.pageContainer
+  display: flex
+  flex-direction: column
+  min-height: 100vh
+  width: 75vw
+  margin: 0 auto
