--- a/src/components/PageFooter/PageFooter.module.sass
+++ b/src/components/PageFooter/PageFooter.module.sass
@@ -11,6 +11,7 @@ $secondary-color-darker: darken($secondary-color, 5%)
   a
     text-decoration: none
     color: $secondary-color
+    -webkit-user-drag: none
 
     &:hover
       color: $secondary-color-darker
