Create global button link style

--- a/src/App.sass
+++ b/src/App.sass
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap')
 
+$secondary-color: #00c853
+
 *
   margin: 0
   padding: 0
@@ -15,3 +17,11 @@ body
   min-height: 100vh
   width: 75vw
   margin: 0 auto
+
+.btnLink 
+  background-color: transparent
+  display: flex
+  justify-content: space-between
+  color: $secondary-color
+  cursor: pointer
+  user-select: none
