--- a/src/components/ThemeContainer/ThemeContainer.module.sass
+++ b/src/components/ThemeContainer/ThemeContainer.module.sass
@@ -7,7 +7,7 @@ input[type="text"]::selection
   color: #212121
 
 .light
-  background-color: #e0e0e0
+  background-color: #eceff1
   color: #212121
 
   ::selection
