--- a/src/pages/Home/Home.module.sass
+++ b/src/pages/Home/Home.module.sass
@@ -41,7 +41,25 @@ $secondary-color-darker: darken($secondary-color, 5%)
 
 .pageCards
   display: grid
-  grid-template-columns: repeat(3, 1fr)
   grid-gap: 30px
-  justify-items: stretch
   margin-top: 1%
+
+@media all and (max-width: 480px)
+  .pageCards
+    grid-template-columns: repeat(1, 1fr)
+
+@media all and (min-width: 480px) and (max-width: 768px)
+  .pageCards
+    grid-template-columns: repeat(1, 1fr)
+
+@media all and (min-width: 768px) and (max-width: 1024px)
+  .pageCards
+    grid-template-columns: repeat(2, 1fr)
+
+@media all and (min-width: 1024px) and (max-width: 1280px)
+  .pageCards
+    grid-template-columns: repeat(2, 1fr)
+  
+@media all and (min-width: 1280px)
+  .pageCards
+    grid-template-columns: repeat(3, 1fr)
